--- a/Lab2/Lab2.vcxproj
+++ b/Lab2/Lab2.vcxproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Definitions.h" />
+    <ClInclude Include="Monitors.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SyncReadAndWrite.h" />
     <ClInclude Include="targetver.h" />
@@ -152,6 +153,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Lab2.cpp" />
+    <ClCompile Include="Lab2Monitors.cpp" />
+    <ClCompile Include="Monitors.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Threads.cpp" />
   </ItemGroup>
